shill: add the DHCPCDControllerInterface and the legacy implementation
We are planing to uprev dhcpcd from 7 to 10. Before uprev, we need a new
proxy interface for the dhcpcd process that handles the different
approaches to communicate old and new dhcpcd.

This CL adds a new interface DHCPCDControllerInterface for this purpose.
Also, the CL adds the implementation for the legacy dhcpcd 7, which
logic is the same as the current DHCPProvider, DHCPCDListener, and
DHCPCDProxy.

Note: the logic related to lease file is not implemented yet.

BUG=b:342068333
TEST=FEATURES=test emerge-test shill

Change-Id: Ib46d755175fd43ca761ad87d10b37aaa34159e40
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5547183
Reviewed-by: Zikai Chen <chenzikai@google.com>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -347,8 +347,11 @@ static_library("libshill") {
     "network/connection_diagnostics.cc",
     "network/dhcp_controller.cc",
     "network/dhcp_provider.cc",
+    "network/dhcpcd_controller_interface.cc",
     "network/dhcpv4_config.cc",
     "network/icmp_session.cc",
+    "network/legacy_dhcpcd/legacy_dhcpcd_controller.cc",
+    "network/legacy_dhcpcd/legacy_dhcpcd_listener.cc",
     "network/network.cc",
     "network/network_manager.cc",
     "network/network_monitor.cc",
@@ -803,6 +806,8 @@ if (use.test) {
       "network/dhcp_provider_test.cc",
       "network/dhcpv4_config_test.cc",
       "network/icmp_session_test.cc",
+      "network/legacy_dhcpcd/legacy_dhcpcd_controller_test.cc",
+      "network/legacy_dhcpcd/legacy_dhcpcd_listener_test.cc",
       "network/mock_capport_proxy.cc",
       "network/mock_connection_diagnostics.cc",
       "network/mock_dhcp_controller.cc",
