--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -1,5 +1,5 @@
 [Hook Scripts]
-cros format = cros format --check --commit ${PRESUBMIT_COMMIT} --include "*/DIR_METADATA" --include "OWNERS*" --include "*.[ch]" --include "*.cc" --include "*.cpp" --include "*.conf" --include "*.gn" --include "*.gni" --include "*.md" --include "*.policy" --include "*.proto" --include "*.py" --include "*.textproto" --exclude "*" ${PRESUBMIT_FILES}
+cros format = cros format --check --commit ${PRESUBMIT_COMMIT} --include "*/DIR_METADATA" --include "OWNERS*" --include "*.[ch]" --include "*.cc" --include "*.cpp" --include "*.conf" --include "*.gn" --include "*.gni" --include "*.md" --include "*.mojom" --include "*.policy" --include "*.proto" --include "*.py" --include "*.textproto" --exclude "*" ${PRESUBMIT_FILES}
 cros lint = cros lint --commit ${PRESUBMIT_COMMIT} ${PRESUBMIT_FILES}
 check-readme.py = ./common-mk/check-readme.py
 check-owners = ./common-mk/check-owners.py
