camera: Move ReziableCpuBuffer to common
BUG=b:341637672
TEST=emerge-kukui cros-camera-libs

Change-Id: Iebfd58cd533cc4b8c72e93fd2cd193d6667e158e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5546867
Commit-Queue: Esker Wong <esker@google.com>
Tested-by: Esker Wong <esker@google.com>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -143,6 +143,7 @@ source_set("base") {
     "//camera/common/metadata_logger.cc",
     "//camera/common/relative_fov.cc",
     "//camera/common/reloadable_config_file.cc",
+    "//camera/common/resizable_cpu_buffer.cc",
     "//camera/common/timezone.cc",
     "//camera/common/udev_watcher.cc",
     "//camera/common/utils/camera_config_impl.cc",
