vm_tools: demos: Move out demos rules into its own file
Instead of having large guest BUILD.gn file, put BUILD.gn rule
nearby demos.

BUG=b:340352510
TEST=cq

Change-Id: I39c20573020cc9b3c493d16687343db896b7d2f2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5547406
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>

--- a/vm_tools/guest/BUILD.gn
+++ b/vm_tools/guest/BUILD.gn
@@ -19,8 +19,8 @@ group("guest") {
     # Exclude notificationd and the demos from fuzzer builds since they
     # pull in wayland, which causes build problems.
     deps += [
-      ":wayland_demo",
-      ":x11_demo",
+      "//vm_tools/demos:wayland_demo",
+      "//vm_tools/demos:x11_demo",
       "//vm_tools/notificationd",
     ]
   }
@@ -48,27 +48,6 @@ group("guest") {
 
 pkg_config("target_defaults") {
   pkg_deps = [ "libchrome" ]
-}
-
-if (!use.fuzzer) {
-  executable("wayland_demo") {
-    sources = [ "../demos/wayland_demo.cc" ]
-    libs = [ "wayland-client" ]
-    pkg_deps = [
-      "libbrillo",
-      "libchrome",
-      "wayland-client",
-    ]
-  }
-
-  executable("x11_demo") {
-    sources = [ "../demos/x11_demo.cc" ]
-    libs = [ "X11" ]
-    pkg_deps = [
-      "libbrillo",
-      "libchrome",
-    ]
-  }
 }
 
 copy("upgrade_container") {
