vm_tools: pstore_dump: Move out pstore_dump rules into its own file
Instead of having large host BUILD.gn file, put BUILD.gn rule nearby
pstore_dump.

BUG=b:340352510
TEST=cq

Change-Id: I76c38b38ae03b7cb1151fd1e28928e6732e32efc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5547407
Tested-by: Yuan Yao <yuanyaogoog@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Yuan Yao <yuanyaogoog@chromium.org>

--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -17,7 +17,7 @@ group("host") {
     "//vm_tools/vsh:vshd",
   ]
   if (use.arcvm) {
-    deps += [ ":vm_pstore_dump" ]
+    deps += [ "//vm_tools/pstore_dump:vm_pstore_dump" ]
   }
   if (use.test) {
     deps += [
@@ -27,7 +27,7 @@ group("host") {
       "//vm_tools/vsh:vsh_test",
     ]
     if (use.arcvm) {
-      deps += [ ":vm_pstore_dump_test" ]
+      deps += [ "//vm_tools/pstore_dump:vm_pstore_dump_test" ]
     }
   }
   if (use.fuzzer) {
@@ -64,36 +64,6 @@ config("host_target_defaults") {
     "USE_CROSVM_VULKAN=${use.vulkan}",
     "USE_PMEM_DEVICE_FOR_ROOTFS=${use.amd64}",
   ]
-}
-
-if (use.arcvm) {
-  static_library("libvm_pstore_dump") {
-    sources = [ "../pstore_dump/persistent_ram_buffer.cc" ]
-    configs += [ ":host_target_defaults" ]
-    deps = [ "//vm_tools:libvm_tools_common" ]
-  }
-
-  executable("vm_pstore_dump") {
-    sources = [ "../pstore_dump/main.cc" ]
-    configs += [ ":host_target_defaults" ]
-    deps = [ ":libvm_pstore_dump" ]
-  }
-}
-
-if (use.test) {
-  if (use.arcvm) {
-    executable("vm_pstore_dump_test") {
-      sources = [ "../pstore_dump/persistent_ram_buffer_test.cc" ]
-      configs += [
-        "//common-mk:test",
-        ":host_target_defaults",
-      ]
-      deps = [
-        ":libvm_pstore_dump",
-        "//common-mk/testrunner:testrunner",
-      ]
-    }
-  }
 }
 
 if (use.fuzzer) {
