camera: Run portrait mode in cros-camera service.
Before we ran portrait mode on cros-camera-algo to have GPU computation
in a separate sandbox. Since currently more GPU features are used in
cros-camera directly, we now put portrait mode into cros-camera service.
This will allow us to disable cros-camera-algo on more devices to save
memory.

BUG=b:341637672
TEST=emerge-kukui cros-camera-lib cros-camera
TEST=start cros-camera

Change-Id: If9671bc59839abe0e46804244d9a5981f3709720
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5546868
Reviewed-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>
Tested-by: Esker Wong <esker@google.com>
Commit-Queue: Esker Wong <esker@google.com>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -26,8 +26,7 @@ group("all") {
     ":libcros_camera_pkg_config",
   ]
 
-  if (use.camera_feature_portrait_mode || use.ipu6se || use.ipu6epadln ||
-      use.ipu6epmtl || use.qualcomm_camx) {
+  if (use.ipu6se || use.ipu6epadln || use.ipu6epmtl || use.qualcomm_camx) {
     deps += [
       ":install_cros_camera_gpu_algo_conf",
       ":install_cros_camera_gpu_algo_policy",
@@ -287,16 +286,6 @@ source_set("v4l2_device") {
     "//camera/common/v4l2_device/v4l2_subdevice.cc",
     "//camera/common/v4l2_device/v4l2_video_node.cc",
   ]
-  public_configs = [ ":target_defaults" ]
-
-  # -fPIC needed by the libcros_camera.so shared library.
-  configs += [ "//common-mk:pic" ]
-  public_deps = [ ":base" ]
-}
-
-source_set("camera_gpu_algorithm") {
-  sources = [ "//camera/common/camera_gpu_algorithm.cc" ]
-  libs = [ "portrait_cros" ]
   public_configs = [ ":target_defaults" ]
 
   # -fPIC needed by the libcros_camera.so shared library.
@@ -604,8 +593,7 @@ install_seccomp_policy("install_cros_camera_algo_policy") {
 
 # The sandboxed GPU service is used by Portrait Mode feature, IPU6SE
 # and Qualcomm Camx camera HAL.
-if (use.camera_feature_portrait_mode || use.ipu6se || use.ipu6epadln ||
-    use.ipu6epmtl || use.qualcomm_camx) {
+if (use.ipu6se || use.ipu6epadln || use.ipu6epmtl || use.qualcomm_camx) {
   install_config("install_cros_camera_gpu_algo_conf") {
     sources = [ "init/cros-camera-gpu-algo.conf" ]
     install_path = "upstart"
