--- a/camera/features/portrait_mode/BUILD.gn
+++ b/camera/features/portrait_mode/BUILD.gn
@@ -14,16 +14,15 @@ pkg_config("target_defaults") {
 
 source_set("portrait_mode") {
   sources = [
-    "//camera/features/portrait_mode/gpu_algo_manager.cc",
     "//camera/features/portrait_mode/portrait_mode_effect.cc",
     "//camera/features/portrait_mode/portrait_mode_stream_manipulator.cc",
   ]
+  libs = [ "portrait_cros" ]
   public_configs = [ ":target_defaults" ]
 
   # -fPIC needed by the libcros_camera.so shared library.
   configs += [ "//common-mk:pic" ]
   deps = [
-    "//camera/common:camera_gpu_algorithm",
     "//camera/common:libcros_camera_mojom",
     "//camera/common:mojo_base",
   ]
