installer: Add tests for encrypted_import
BUG=b:340212443
TEST=cros_workon start chromeos-base/chromeos-installer
TEST=FEATURES=test emerge-reven chromeos-installer

Change-Id: I4beffae42481f7aa6450ab8d8a1e58a7fd0a8cfc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5545685
Auto-Submit: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -212,6 +212,7 @@ if (!use.cros_host && use.test) {
       "chromeos_install_config_test.cc",
       "chromeos_legacy_test.cc",
       "chromeos_verity_test.cc",
+      "encrypted_import_test.cc",
       "inst_util_test.cc",
     ]
     if (use.enable_slow_boot_notify) {
