crash: Start recording CrashReporter metrics
Start recording some of the crash reporter metrics defined in
go/cros-crash-metrics. This is just the initial set of some metrics, but
it gives the idea.

Privacy approval to start recording:
https://b.corp.google.com/issues/311430883#comment17

BUG=b:177552411
TEST=Crashed userspace program, confirmed Chrome read structure events like
EventsProto {StructuredEventProto { event_name_hash:1308528214212923902 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:17029140179819671253 value_int64:0} Metric {name_hash:10359177269713898166 value_int64:1} Metric {name_hash:9194832091806358911 value_int64:0}}
and
EventsProto {StructuredEventProto { event_name_hash:7850511865548751040 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:10359177269713898166 value_int64:1} Metric {name_hash:9194832091806358911 value_int64:0}}
TEST=Filled /var/spool/crash, crashed userspace progran, Chrome read
structures like:
EventsProto {StructuredEventProto { event_name_hash:7850511865548751040 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:10359177269713898166 value_int64:1} Metric {name_hash:9194832091806358911 value_int64:0}}
EventsProto {StructuredEventProto { event_name_hash:1308528214212923902 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:17029140179819671253 value_int64:400} Metric {name_hash:10359177269713898166 value_int64:1} Metric {name_hash:9194832091806358911 value_int64:0}}
TEST=Rebooted, Chrome read structures like
EventsProto {StructuredEventProto { event_name_hash:7850511865548751040 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:10359177269713898166 value_int64:12} Metric {name_hash:9194832091806358911 value_int64:0}}
EventsProto {StructuredEventProto { event_name_hash:7850511865548751040 event_type:REGULAR project_name_hash:13615523565054809415 Metric {name_hash:10359177269713898166 value_int64:12

--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -78,6 +78,7 @@ executable("bluetooth_devcd_parser") {
 
 pkg_config("libcrash_config") {
   pkg_deps = [
+    "libbrillo",
     "libchrome",
     "libcrossystem",
     "libsession_manager-client",
@@ -91,8 +92,10 @@ pkg_config("libcrash_config") {
 
 static_library("libcrash") {
   sources = [
+    "crash_collection_status.cc",
     "crash_collector_names.cc",
     "crossystem.cc",
+    "metric_utils.cc",
     "paths.cc",
     "util.cc",
     "vm_support.cc",
@@ -128,7 +131,6 @@ static_library("libcrash_reporter") {
     "clobber_state_collector.cc",
     "connectivity_util.cc",
     "crash_adaptor.cc",
-    "crash_collection_status.cc",
     "crash_collector.cc",
     "crash_reporter_failure_collector.cc",
     "detailed_hardware_data.cc",
@@ -495,6 +497,7 @@ if (use.test) {
       "kernel_collector_test.h",
       "kernel_util_test.cc",
       "kernel_warning_collector_test.cc",
+      "metric_utils_test.cc",
       "missed_crash_collector_test.cc",
       "mount_failure_collector_test.cc",
       "paths_test.cc",
