biod: Add study/analysis-tool to pyproject.toml
BUG=b:339298572
TEST=None

Change-Id: I7fa00fec2ffc2ab65c9627ea336379d05a1c362b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5550418
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/biod/pyproject.toml
+++ b/biod/pyproject.toml
@@ -8,7 +8,7 @@
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
-include = ["study"]
+include = ["study", "study/analysis-tool"]
 reportMissingImports = true
 reportMissingTypeStubs = false
 pythonVersion = "3.8"
