biod: Enable verbose LSP output for pyright
It is sometimes difficult to debug why the python language server
isn't working. For example, when code completions aren't working.
This option will force the LSP to print more information to the
VSCode OUTPUT/Python Language Server window.

BUG=b:339298572
TEST=None

Change-Id: Ib164a3d85d9afe400f832079df0043be93657d5d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5550417
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/biod/pyproject.toml
+++ b/biod/pyproject.toml
@@ -17,6 +17,7 @@ typeCheckingMode = "strict"
 # Please run ./study/python-venv-setup.sh to create this virtual environment.
 venvPath = "study"
 venv = ".venv"
+verboseOutput = true
 
 [tool.black]
 # Copied from ~/chromiumos/chromite/pyproject.toml, since we can't include that
