--- a/ml/init/ml-service.conf
+++ b/ml/init/ml-service.conf
@@ -51,6 +51,7 @@ script
     # -b /var/lib/ml_service for ml_service metrics
     # -b /var/lib/metrics for uma metrics
     # -b ${CAMERA_LIBFS_DIR} for document scanner
+    # -b /sys for XNNPACK which reads cpu info from there
     # -k /run/imageloader with MS_BIND|MS_REC to pick up any new DLC package
     #    mounts
     # We have to use nested minijail to enable correct userns set-up: the outer
@@ -79,6 +80,7 @@ script
       -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC' \
       -b "${CAMERA_LIBFS_DIR}" \
       -b /run/dbus \
+      -b /sys \
       -b /var/lib/ml_service,,1 \
       -b /var/lib/metrics,,1 \
       "$@" \
