vm_tools: chunnel: switch to platform2 system_api crate
Remove the chunnel-specific system_api and use the top-level one from
platform2 now that it has the appropriate proto bindings.

BUG=b:341816758
TEST=emerge-tatl dev-rust/system_api chromeos-base/chunnel

Cq-Depend: chromium:5552329
Change-Id: Iba357926545d21868490ff4b1243a89764320b7b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5551569
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>

--- a/vm_tools/chunnel/Cargo.toml
+++ b/vm_tools/chunnel/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4"
 nix = { version = "0.26", features = ["signal"] }
 protobuf = "3.2"
 remain = "0.2"
-system_api = { path = "system_api" }
+system_api = { path = "../../system_api" } # provided by ebuild
 vsock = "0.3"
 
 [build-dependencies]
