spaced: Add GetQuotaCurrentSpacesForIds
DD: go/arcvm-quotactl-ipc-speedup

This method takes a path (string) and lists of IDs (UIDs/GIDs/project
IDs) and returns the maps from these IDs to their current disk space
usages. This can be used as an alternative to the existing D-Bus methods
GetQuotaCurrentSpaceFor(Uid/Gid/ProjectId) to reduce the D-Bus overhead
when the caller needs to call them many times.

BUG=b:279633782
TEST=FEATURES=test emerge-<BOARD> spaced
TEST=With CL:5460657, CL:5464559, CL:5464680 and http://ag/27057956, run
  android.appsecurity.cts.StorageHostTest

Change-Id: Ie61375e4176787ebde0dabed80d7a4caf28d02e0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5537149
Commit-Queue: Momoko Hattori <momohatt@chromium.org>
Tested-by: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Alexis Savery <asavery@chromium.org>

--- a/spaced/dbus_bindings/org.chromium.Spaced.conf
+++ b/spaced/dbus_bindings/org.chromium.Spaced.conf
@@ -80,5 +80,8 @@
     <allow send_destination="org.chromium.Spaced"
            send_interface="org.chromium.Spaced"
            send_member="GetQuotaCurrentSpaceForProjectId"/>
+    <allow send_destination="org.chromium.Spaced"
+           send_interface="org.chromium.Spaced"
+           send_member="GetQuotaCurrentSpacesForIds"/>
   </policy>
 </busconfig>
