patchpanel: rename downstream_network_service
This patch renames the "downstream_network_service" header and impl
files to "downstream_network_info" and prepares to split the definition
of DownstreamNetworkInfo and DownstreamNetworkService in separate files.

BUG=b:336883268
TEST=FEATURES=test emerge-$BOARD patchpanel

Change-Id: I198f828ee620a6108eda261f499280c32166804d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5553634
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -140,7 +140,7 @@ static_library("libpatchpanel") {
     "crostini_service.cc",
     "datapath.cc",
     "dhcp_server_controller.cc",
-    "downstream_network_service.cc",
+    "downstream_network_info.cc",
     "firewall.cc",
     "guest_ipv6_service.cc",
     "iptables.cc",
@@ -318,7 +318,7 @@ if (use.test) {
       "dhcp_server_controller_test.cc",
       "dns/dns_query_test.cc",
       "dns/dns_response_test.cc",
-      "downstream_network_service_test.cc",
+      "downstream_network_info_test.cc",
       "firewall_test.cc",
       "guest_ipv6_service_test.cc",
       "lifeline_fd_service_test.cc",
