login: Add EmitStartedUserSession D-Bus method_call
This CL adds a new D-Bus method_call "EmitStartedUserSession", which is
called from Chrome when all the critical login tasks are finished.
This method_call emits "started-user-session" upstart signal to notify
it to the system so that system daemons can take actions at the timing.
This new upstart signal is useful to defer some actions after the
critical tasks.

BUG=b:342067535
TEST=`cros_workon_make --board=dedede --test chroemos-login`
TEST=Confirmed started-user-session was emitted with crrev.com/c/5553244

Change-Id: I42438e17f47a2fdddbe7d453e0ccc4af278be1b0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5553516
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Ryuichiro Chiba <chibar@chromium.org>
Tested-by: Ryuichiro Chiba <chibar@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>

--- a/login_manager/SessionManager.conf
+++ b/login_manager/SessionManager.conf
@@ -70,6 +70,9 @@
            send_member="StartSessionEx"/>
     <allow send_destination="org.chromium.SessionManager"
            send_interface="org.chromium.SessionManagerInterface"
+           send_member="EmitStartedUserSession"/>
+    <allow send_destination="org.chromium.SessionManager"
+           send_interface="org.chromium.SessionManagerInterface"
            send_member="StopSession"/>
     <allow send_destination="org.chromium.SessionManager"
            send_interface="org.chromium.SessionManagerInterface"
