shill: Add non_const_ref for mojo type_mappings
`non_const_ref` field is required for type_mappings after CL:5527832
provided this option.

BUG=b:340134926
TEST=emerge-volteer chromeos-base/shill

Change-Id: I9031b7ec398b4c51e0b5b3855fecba251a8754fb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5553240
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/shill/mojom/type_mappings.json
+++ b/shill/mojom/type_mappings.json
@@ -7,6 +7,7 @@
       "hashable": false,
       "move_only": false,
       "nullable_is_same_type": true,
+      "non_const_ref": false,
       "public_headers": [
         "net-base/http_url.h"
       ],
