init: startup: Add mount_helper_interface
To test encstateful mount, separate via an interface class
the mount/unmount operation.

BUG=b:172221451
TEST=Unit tests.

Change-Id: I9e275b8f41373e6e3e749284ad0e22badeb39046
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5555699
Reviewed-by: Alexis Savery <asavery@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -105,6 +105,7 @@ static_library("libcrosstartup") {
     "startup/flags.h",
     "startup/mount_helper.cc",
     "startup/mount_helper_factory.cc",
+    "startup/mount_var_home_impl.cc",
     "startup/security_manager.cc",
     "startup/standard_mount_helper.cc",
     "startup/startup_dep_impl.cc",
