fpstudy: Typo corrections in image builder instructions
I also ran mdformat as an extra check.

BUG=b:341945893
TEST=mdformat --in_place --compatibility \
       --skip_extension_check \
       fpstudy-image-builder/TEMPLATE_README.md.in

Change-Id: I80a670b0b3dba33ad8d8f97d6d86b2d621199524
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5555862
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>

--- a/biod/study/fpstudy-image-builder/TEMPLATE_README.md.in
+++ b/biod/study/fpstudy-image-builder/TEMPLATE_README.md.in
@@ -176,14 +176,14 @@ See [CCD Open] and [CCD Cable] for more information.
 1.  Login to the Chromebook using a test Gmail account.
 2.  Navigate to `http://localhost:9000`.
 3.  Start a capture using the onscreen steps.
-4.  Ensure that the capture is deleted prior to starting the offical study.
+4.  Ensure that the capture is deleted prior to starting the official study.
 
 # Appendix
 
 ## A. Open Root Terminal {#open-root-terminal}
 
 1.  Press `Ctrl` + `Alt` + `↻` (Ctrl-Alt-"refresh") to open a terminal. On older
-    devces, it might be `Ctrl` + `Alt` + `➝` (Ctrl-Alt-"forward").
+    devices, it might be `Ctrl` + `Alt` + `➝` (Ctrl-Alt-"forward").
 2.  Login as `root` with password `test0000` (the password may not be necessary)
 
 ## B. Alternative Root Terminal
@@ -216,7 +216,7 @@ additional words.
 ## E. Boot from USB and Install {#boot-from-usb-and-install}
 
 1.  Plug the flash drive into the Chromebook.
-1.  Reboot the Chrombook.
+1.  Reboot the Chromebook.
 
 1.  When prompted with the OS verification screen, quickly press `Ctrl-U`, to
     boot from the USB flash drive.
