fpstudy: Add note about crosh shell in image builder instructions
Even though you can "sudo -i" in the ChomeOS UI's shell (Ctrl-Alt-T),
you still don't seem to have permission or capabilities to unbind
drivers, toggle GPIOs, and whatnot. Therefore, it is very important
for partners to run these important commands from a tty.

BUG=b:341945893
TEST=mdformat --in_place --compatibility \
       --skip_extension_check \
       fpstudy-image-builder/TEMPLATE_README.md.in

Change-Id: I51bbb95cc3ed5d96916a5c0ca9f2f208f1c9d063
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5555863
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>

--- a/biod/study/fpstudy-image-builder/TEMPLATE_README.md.in
+++ b/biod/study/fpstudy-image-builder/TEMPLATE_README.md.in
@@ -186,6 +186,10 @@ See [CCD Open] and [CCD Cable] for more information.
     devices, it might be `Ctrl` + `Alt` + `➝` (Ctrl-Alt-"forward").
 2.  Login as `root` with password `test0000` (the password may not be necessary)
 
+***⚠️ Most of the commands in this tutorial cannot be run from the ChromeOS UI's
+crosh shell, via Ctrl-Alt-T. You must run them using the method described above,
+otherwise you may see a permission issue.***
+
 ## B. Alternative Root Terminal
 
 After logging in using your test Gmail account, press `Ctrl-Alt-T`. Type
