crash: don't include qcom_stats when it's not available
Follow-up to https://crrev.com/c/5547483 .

BUG=b:342065845
TEST=See test procedure for https://crrev.com/c/5547483.
     Replace 'brya' with 'trogdor'.
     On the trogdor device (make sure the kernel has been instrumented
     to warn on resume):
     (dut) stop anomaly-detector; start anomaly-detector TESTONLY_SEND_ALL=--testonly_send_all
     (dut) cd /var/spool/crash; rm *
     (dut) powerd_dbus_suspend --suspend_for_sec=10
     (dut) zcat kernel_suspend_warning*.log.gz | grep /sys/kernel/debug/qcom_stats
        ===/sys/kernel/debug/qcom_stats/adsp (tail) ===
        ===/sys/kernel/debug/qcom_stats/adsp_island (tail) ===
        ===/sys/kernel/debug/qcom_stats/aosd (tail) ===
        ===/sys/kernel/debug/qcom_stats/cdsp (tail) ===
        ===/sys/kernel/debug/qcom_stats/cxsd (tail) ===
        ===/sys/kernel/debug/qcom_stats/ddr (tail) ===
        ===/sys/kernel/debug/qcom_stats/display (tail) ===
        ===/sys/kernel/debug/qcom_stats/gpu (tail) ===
        ===/sys/kernel/debug/qcom_stats/modem (tail) ===
        ===/sys/kernel/debug/qcom_stats/slpi (tail) ===
        ===/sys/kernel/debug/qcom_stats/slpi_island (tail) ===
        ===/sys/kernel/debug/qcom_stats/wpss (tail) ===
     Then replace 'kukui' with 'brya' (or anything without
     /sys/kernel/debug/qcom_stats).
     (dut) stop anomaly-detector; start anomaly-detector TESTONLY_SEND_ALL=--testonly_send_all
     (dut) cd /var/spool/crash; rm *
     Trigger a suspend with kernel warning that causes a crash report
     to be generated.
     (dut) powerd_dbus_suspend --suspend_for_sec=10
     (dut) zcat kernel_suspend_warning*.log.gz | grep "ls: cannot access"

Change-Id: I6d824d6755846c20d9ef7fbb1d841cda7b8ff076
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5560667
Reviewed-by: Stephen Boyd <swboyd@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Eizan Miyamoto <eizan@chromium.org>
Commit-Qu

--- a/crash-reporter/init/anomaly-detector.conf
+++ b/crash-reporter/init/anomaly-detector.conf
@@ -31,6 +31,7 @@ limit as 600000000 unlimited
 # /var/lib/metrics: We write out uma stats directly.
 # /sys: Some kernel detectors will read PCI device information.
 # /sys/kernel/debug/pmc_core: For kernel detectors for suspend failures.
+# /sys/kernel/debug/qcom_stats: For kernel detectors for suspend failures.
 # /run/crash_reporter: We need to indicate runtime state.
 # /run/dbus: We need to talk to dbus.
 # /run/metrics: crash_reporter needs to read metrics consent state.
@@ -50,10 +51,12 @@ env UMA_CONSENT='/run/daemon-store/uma-consent'
 env APPS_CONSENT='/run/daemon-store/appsync-consent'
 env APPS_OPTIN='/run/daemon-store/appsync-optin'
 script
-  PMC_CORE_ARGS=""
+  DEBUGFS_ARGS="-k tmpfs,/sys/kernel/debug,tmpfs"
   if [ -d /sys/kernel/debug/pmc_core ]; then
-    PMC_CORE_ARGS="${PMC_CORE_ARGS} -k tmpfs,/sys/kernel/debug,tmpfs"
-    PMC_CORE_ARGS="${PMC_CORE_ARGS} -b /sys/kernel/debug/pmc_core"
+    DEBUGFS_ARGS="${DEBUGFS_ARGS} -b /sys/kernel/debug/pmc_core"
+  fi
+  if [ -d /sys/kernel/debug/qcom_stats ]; then
+    DEBUGFS_ARGS="${DEBUGFS_ARGS} -b /sys/kernel/debug/qcom_stats"
   fi
   exec /sbin/minijail0 \
     --no-default-runtime-environment \
@@ -64,7 +67,7 @@ script
     -i -N -p -v -r --uts -l -g syslog \
     --mount-dev -b /dev/log \
     -b /sys \
-    ${PMC_CORE_ARGS} \
+    ${DEBUGFS_ARGS} \
     -k '/var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
     -b /var/log -b /var/spool,,1 -b /var/lib/metrics,,1 \
     -b /var/lib/devicesettings \
