--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -345,11 +345,13 @@ kernel-suspend-warning=\
   echo "===dmesg==="; \
   dmesg; \
   echo EOF; \
-  for f in $(ls -1 /sys/kernel/debug/qcom_stats/*); do \
-    echo "===$f (tail) ==="; \
-    tail -20 $f; \
-    echo EOF; \
-  done; \
+  if [ -d /sys/kernel/debug/qcom_stats/ ]; then \
+    for f in $(ls -1 /sys/kernel/debug/qcom_stats/*); do \
+      echo "===$f (tail) ==="; \
+      tail -20 $f; \
+      echo EOF; \
+    done; \
+  fi; \
   if [ -e /sys/kernel/debug/pmc_core/substate_requirements ]; then \
     echo "===substate_requirements==="; \
     cat /sys/kernel/debug/pmc_core/substate_requirements; \
