patchpanel: define DownstreamNetworkService
This patch defines a new DownstreamNetworkService class with the minimal
logic necessary for instantiation inside Manager and for replacing the
following Manager methods:
 - Manager::CreateTetheredNetwork()
 - Manager::CreateLocalOnlyNetwork()
 - Manager::GetDownstreamNetworkInfo()
 - Manager::StartTetheringUpstreamNetwork()
 - Manager::StopTetheringUpstreamNetwork()

BUG=b:336883268
TEST=FEATURES=test emerge-$BOARD patchpanel

Change-Id: Id05ee99389f534342d4e6862c2f6f4c22bdffd47
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5532127
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Tested-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -141,6 +141,7 @@ static_library("libpatchpanel") {
     "datapath.cc",
     "dhcp_server_controller.cc",
     "downstream_network_info.cc",
+    "downstream_network_service.cc",
     "firewall.cc",
     "guest_ipv6_service.cc",
     "iptables.cc",
@@ -319,6 +320,7 @@ if (use.test) {
       "dns/dns_query_test.cc",
       "dns/dns_response_test.cc",
       "downstream_network_info_test.cc",
+      "downstream_network_service_test.cc",
       "firewall_test.cc",
       "guest_ipv6_service_test.cc",
       "lifeline_fd_service_test.cc",
