--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -9,28 +9,32 @@ import("//common-mk/pkg_config.gni")
 
 group("all") {
   deps = [
-    ":cros_camera_algo",
     ":install_camera_hal_dispatcher_mojo",
-    ":install_cros_camera_algo_conf",
-    ":install_cros_camera_algo_policy",
     ":install_dbus_cros_camera_algo_conf",
     ":install_gen_include_iioservice_mojo",
     ":install_include_cros_camera",
     ":install_jpeg_accelerator_mojo",
     ":install_libcamera_connector_so",
-    ":install_minijail_algo_conf",
-    ":install_minijail_gpu_algo_conf",
     ":libcros_camera",
     ":libcros_camera_device_config",
     ":libcros_camera_device_config_pkg_config",
     ":libcros_camera_pkg_config",
   ]
 
-  if (use.ipu6se || use.ipu6epadln || use.ipu6epmtl || use.qualcomm_camx) {
+  if (use.cros_camera_algo) {
     deps += [
-      ":install_cros_camera_gpu_algo_conf",
-      ":install_cros_camera_gpu_algo_policy",
+      ":cros_camera_algo",
+      ":install_cros_camera_algo_conf",
+      ":install_cros_camera_algo_policy",
+      ":install_minijail_algo_conf",
     ]
+    if (use.ipu6se || use.ipu6epadln || use.ipu6epmtl || use.qualcomm_camx) {
+      deps += [
+        ":install_cros_camera_gpu_algo_conf",
+        ":install_cros_camera_gpu_algo_policy",
+        ":install_minijail_gpu_algo_conf",
+      ]
+    }
   }
 
   if (use.test) {
