camera: Add BufferDumperStreamManipulator for debugging
BUG=None
TEST=Manually.

Change-Id: I5c51c3267ae076803708456e9f3b13a5fabf0c9f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5561891
Tested-by: Ren-Pei Zeng <kamesan@chromium.org>
Commit-Queue: Ren-Pei Zeng <kamesan@chromium.org>
Reviewed-by: Juliana Chang <julianachang@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -295,6 +295,7 @@ source_set("v4l2_device") {
 
 source_set("stream_manipulator") {
   sources = [
+    "//camera/common/buffer_dumper_stream_manipulator.cc",
     "//camera/common/capture_result_sequencer.cc",
     "//camera/common/framing_stream_manipulator.cc",
     "//camera/common/still_capture_processor_impl.cc",
